--- a/source/index.html
+++ b/source/index.html
@@ -2865,8 +2865,8 @@ net.brehaut.ClojureTools = (function (SH) {
     build_tree: build_tree
   };
 })(SyntaxHighlighter);
-</script><title>marcandregoyette -- Marginalia</title></head><body><table><tr><td class="docs"><div class="header"><h1 class="project-name"><a href="https://marcandregoyette.com">marcandregoyette</a></h1><h2 class="project-version">0.17.0</h2><br /><p>Personal website of Marc-André Goyette (https://marcandregoyette.com).</p>
-</div><div class="dependencies"><h3>dependencies</h3><table><tr><td class="dep-name">org.clojure/clojure</td><td class="dotted"><hr /></td><td class="dep-version">1.10.0</td></tr><tr><td class="dep-name">org.clojure/data.xml</td><td class="dotted"><hr /></td><td class="dep-version">0.0.8</td></tr><tr><td class="dep-name">org.clojure/tools.reader</td><td class="dotted"><hr /></td><td class="dep-version">1.3.2</td></tr><tr><td class="dep-name">clj-time</td><td class="dotted"><hr /></td><td class="dep-version">0.15.1</td></tr><tr><td class="dep-name">clygments</td><td class="dotted"><hr /></td><td class="dep-version">1.0.0</td></tr><tr><td class="dep-name">com.vladsch.flexmark/flexmark</td><td class="dotted"><hr /></td><td class="dep-version">0.40.16</td></tr><tr><td class="dep-name">enlive</td><td class="dotted"><hr /></td><td class="dep-version">1.1.6</td></tr><tr><td class="dep-name">garden</td><td class="dotted"><hr /></td><td class="dep-version">1.3.6</td></tr><tr><td class="dep-name">optimus</td><td class="dotted"><hr /></td><td class="dep-version">0.20.2</td></tr><tr><td class="dep-name">ring</td><td class="dotted"><hr /></td><td class="dep-version">1.7.1</td></tr><tr><td class="dep-name">rum</td><td class="dotted"><hr /></td><td class="dep-version">0.11.3</td></tr><tr><td class="dep-name">stasis</td><td class="dotted"><hr /></td><td class="dep-version">2.4.0</td></tr></table></div></td><td class="codes" style="text-align: center; vertical-align: middle;color: #666;padding-right:20px"><br /><br /><br />(this space intentionally left almost blank)</td></tr><tr><td class="docs"><div class="toc"><a name="toc"><h3>namespaces</h3></a><ul><li><a href="#marcandregoyette.core">marcandregoyette.core</a></li><li><a href="#marcandregoyette.pages">marcandregoyette.pages</a></li><li><a href="#marcandregoyette.posts">marcandregoyette.posts</a></li><li><a href="#marcandregoyette.highlight">marcandregoyette.highlight</a></li><li><a href="#marcandregoyette.templates">marcandregoyette.templates</a></li><li><a href="#marcandregoyette.components">marcandregoyette.components</a></li><li><a href="#marcandregoyette.categories">marcandregoyette.categories</a></li><li><a href="#marcandregoyette.tags">marcandregoyette.tags</a></li><li><a href="#marcandregoyette.custom-styles">marcandregoyette.custom-styles</a></li><li><a href="#marcandregoyette.feed">marcandregoyette.feed</a></li></ul></div></td><td class="codes">&nbsp;</td></tr><tr><td class="docs"><div class="docs-header"><a class="anchor" href="#marcandregoyette.core" name="marcandregoyette.core"><h1 class="project-name">marcandregoyette.core</h1><a class="toc-link" href="#toc">toc</a></a></div></td><td class="codes" /></tr><tr><td class="docs"><h2>A static site generated with Stasis</h2>
+</script><title>marcandregoyette -- Marginalia</title></head><body><table><tr><td class="docs"><div class="header"><h1 class="project-name"><a href="https://marcandregoyette.com">marcandregoyette</a></h1><h2 class="project-version">0.18.0</h2><br /><p>Personal website of Marc-André Goyette (https://marcandregoyette.com).</p>
+</div><div class="dependencies"><h3>dependencies</h3><table><tr><td class="dep-name">org.clojure/clojure</td><td class="dotted"><hr /></td><td class="dep-version">1.10.0</td></tr><tr><td class="dep-name">org.clojure/data.xml</td><td class="dotted"><hr /></td><td class="dep-version">0.0.8</td></tr><tr><td class="dep-name">org.clojure/tools.reader</td><td class="dotted"><hr /></td><td class="dep-version">1.3.2</td></tr><tr><td class="dep-name">clygments</td><td class="dotted"><hr /></td><td class="dep-version">1.0.0</td></tr><tr><td class="dep-name">com.vladsch.flexmark/flexmark</td><td class="dotted"><hr /></td><td class="dep-version">0.40.18</td></tr><tr><td class="dep-name">enlive</td><td class="dotted"><hr /></td><td class="dep-version">1.1.6</td></tr><tr><td class="dep-name">garden</td><td class="dotted"><hr /></td><td class="dep-version">1.3.6</td></tr><tr><td class="dep-name">optimus</td><td class="dotted"><hr /></td><td class="dep-version">0.20.2</td></tr><tr><td class="dep-name">ring</td><td class="dotted"><hr /></td><td class="dep-version">1.7.1</td></tr><tr><td class="dep-name">rum</td><td class="dotted"><hr /></td><td class="dep-version">0.11.3</td></tr><tr><td class="dep-name">stasis</td><td class="dotted"><hr /></td><td class="dep-version">2.4.0</td></tr></table></div></td><td class="codes" style="text-align: center; vertical-align: middle;color: #666;padding-right:20px"><br /><br /><br />(this space intentionally left almost blank)</td></tr><tr><td class="docs"><div class="toc"><a name="toc"><h3>namespaces</h3></a><ul><li><a href="#marcandregoyette.core">marcandregoyette.core</a></li><li><a href="#marcandregoyette.pages">marcandregoyette.pages</a></li><li><a href="#marcandregoyette.posts">marcandregoyette.posts</a></li><li><a href="#marcandregoyette.highlight">marcandregoyette.highlight</a></li><li><a href="#marcandregoyette.templates">marcandregoyette.templates</a></li><li><a href="#marcandregoyette.components">marcandregoyette.components</a></li><li><a href="#marcandregoyette.categories">marcandregoyette.categories</a></li><li><a href="#marcandregoyette.tags">marcandregoyette.tags</a></li><li><a href="#marcandregoyette.custom-styles">marcandregoyette.custom-styles</a></li><li><a href="#marcandregoyette.feed">marcandregoyette.feed</a></li></ul></div></td><td class="codes">&nbsp;</td></tr><tr><td class="docs"><div class="docs-header"><a class="anchor" href="#marcandregoyette.core" name="marcandregoyette.core"><h1 class="project-name">marcandregoyette.core</h1><a class="toc-link" href="#toc">toc</a></a></div></td><td class="codes" /></tr><tr><td class="docs"><h2>A static site generated with Stasis</h2>
 
 <p>This is the annotated source code of
 <a href="https://marcandregoyette.com">marcandregoyette.com</a>.</p>
@@ -2942,16 +2942,15 @@ and the source of
             [marcandregoyette.posts :as posts]
             [marcandregoyette.tags :as tags]
             [marcandregoyette.templates :as templates]
-            [clj-time.core :as time]
-            [clj-time.format :as time-format]
-            [stasis.core :as stasis]))</pre></td></tr><tr><td class="docs">
-</td><td class="codes"><pre class="brush: clojure">(def iso-8601-date-formatter (time-format/formatters :date-time-no-ms))</pre></td></tr><tr><td class="docs">
+            [stasis.core :as stasis])
+  (:import java.time.OffsetDateTime
+           java.time.format.DateTimeFormatter))</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(defn- post-date [post]
-  (-&gt;&gt; post
-       val
-       :metadata
-       :date
-       (time-format/parse iso-8601-date-formatter)))</pre></td></tr><tr><td class="docs">
+  (-&gt; post
+      val
+      :metadata
+      :date
+      (OffsetDateTime/parse DateTimeFormatter/ISO_DATE_TIME)))</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(defn- sort-posts [posts]
   (reverse (sort-by post-date posts)))</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(defn- filter-posts [posts predicate]
@@ -3146,8 +3145,7 @@ and the source of
   (:require [clojure.string :as string]
             [marcandregoyette.categories :as categories]
             [marcandregoyette.components :as components]
-            [rum.core :as rum])
-  (:import java.io.StringReader))</pre></td></tr><tr><td class="docs">
+            [rum.core :as rum]))</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(defn- category-selector [category]
   (keyword (str &quot;a#&quot;
                 (when category
@@ -3205,24 +3203,16 @@ and the source of
 </td><td class="codes"><pre class="brush: clojure">(ns marcandregoyette.components
   (:require [marcandregoyette.categories :as categories]
             [marcandregoyette.tags :as tags]
-            [clj-time.core :as time]
-            [clj-time.format :as time-format]
             [clojure.string :as string]
             [rum.core :as rum])
-  (:import java.util.Locale))</pre></td></tr><tr><td class="docs">
-</td><td class="codes"><pre class="brush: clojure">(def iso-8601-date-formatter (time-format/formatters :date-time-no-ms))</pre></td></tr><tr><td class="docs">
-</td><td class="codes"><pre class="brush: clojure">(def en-date-formatter
-  (time-format/with-locale
-    (time-format/formatter &quot;dd MMMM YYYY&quot;) Locale/CANADA))</pre></td></tr><tr><td class="docs">
-</td><td class="codes"><pre class="brush: clojure">(def fr-date-formatter
-  (time-format/with-locale
-    (time-format/formatter &quot;dd MMMM YYYY&quot;) Locale/CANADA_FRENCH))</pre></td></tr><tr><td class="docs">
+  (:import java.time.OffsetDateTime
+           java.time.format.DateTimeFormatter
+           java.util.Locale))</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(defn- format-date
   [date language]
-  (-&gt;&gt; date
-       (time-format/parse iso-8601-date-formatter)
-       (time-format/unparse
-        (if (= language &quot;fr&quot;) fr-date-formatter en-date-formatter))))</pre></td></tr><tr><td class="docs">
+  (let [locale (if (= language &quot;fr&quot;) Locale/CANADA_FRENCH Locale/CANADA)]
+    (-&gt;&gt; (OffsetDateTime/parse date DateTimeFormatter/ISO_DATE_TIME)
+         (.format (DateTimeFormatter/ofPattern &quot;dd MMMM YYYY&quot; locale)))))</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(rum/defc post-content [url metadata content]
   [:div.post-content
    {:dangerouslySetInnerHTML
