--- a/source/index.html
+++ b/source/index.html
@@ -2865,7 +2865,7 @@ net.brehaut.ClojureTools = (function (SH) {
     build_tree: build_tree
   };
 })(SyntaxHighlighter);
-</script><title>marcandregoyette -- Marginalia</title></head><body><table><tr><td class="docs"><div class="header"><h1 class="project-name"><a href="https://marcandregoyette.com">marcandregoyette</a></h1><h2 class="project-version">0.18.0</h2><br /><p>Personal website of Marc-André Goyette (https://marcandregoyette.com).</p>
+</script><title>marcandregoyette -- Marginalia</title></head><body><table><tr><td class="docs"><div class="header"><h1 class="project-name"><a href="https://marcandregoyette.com">marcandregoyette</a></h1><h2 class="project-version">0.19.0</h2><br /><p>Personal website of Marc-André Goyette (https://marcandregoyette.com).</p>
 </div><div class="dependencies"><h3>dependencies</h3><table><tr><td class="dep-name">org.clojure/clojure</td><td class="dotted"><hr /></td><td class="dep-version">1.10.0</td></tr><tr><td class="dep-name">org.clojure/data.xml</td><td class="dotted"><hr /></td><td class="dep-version">0.0.8</td></tr><tr><td class="dep-name">org.clojure/tools.reader</td><td class="dotted"><hr /></td><td class="dep-version">1.3.2</td></tr><tr><td class="dep-name">clygments</td><td class="dotted"><hr /></td><td class="dep-version">1.0.0</td></tr><tr><td class="dep-name">com.vladsch.flexmark/flexmark</td><td class="dotted"><hr /></td><td class="dep-version">0.40.18</td></tr><tr><td class="dep-name">enlive</td><td class="dotted"><hr /></td><td class="dep-version">1.1.6</td></tr><tr><td class="dep-name">garden</td><td class="dotted"><hr /></td><td class="dep-version">1.3.6</td></tr><tr><td class="dep-name">optimus</td><td class="dotted"><hr /></td><td class="dep-version">0.20.2</td></tr><tr><td class="dep-name">ring</td><td class="dotted"><hr /></td><td class="dep-version">1.7.1</td></tr><tr><td class="dep-name">rum</td><td class="dotted"><hr /></td><td class="dep-version">0.11.3</td></tr><tr><td class="dep-name">stasis</td><td class="dotted"><hr /></td><td class="dep-version">2.4.0</td></tr></table></div></td><td class="codes" style="text-align: center; vertical-align: middle;color: #666;padding-right:20px"><br /><br /><br />(this space intentionally left almost blank)</td></tr><tr><td class="docs"><div class="toc"><a name="toc"><h3>namespaces</h3></a><ul><li><a href="#marcandregoyette.core">marcandregoyette.core</a></li><li><a href="#marcandregoyette.pages">marcandregoyette.pages</a></li><li><a href="#marcandregoyette.posts">marcandregoyette.posts</a></li><li><a href="#marcandregoyette.highlight">marcandregoyette.highlight</a></li><li><a href="#marcandregoyette.templates">marcandregoyette.templates</a></li><li><a href="#marcandregoyette.components">marcandregoyette.components</a></li><li><a href="#marcandregoyette.categories">marcandregoyette.categories</a></li><li><a href="#marcandregoyette.tags">marcandregoyette.tags</a></li><li><a href="#marcandregoyette.custom-styles">marcandregoyette.custom-styles</a></li><li><a href="#marcandregoyette.feed">marcandregoyette.feed</a></li></ul></div></td><td class="codes">&nbsp;</td></tr><tr><td class="docs"><div class="docs-header"><a class="anchor" href="#marcandregoyette.core" name="marcandregoyette.core"><h1 class="project-name">marcandregoyette.core</h1><a class="toc-link" href="#toc">toc</a></a></div></td><td class="codes" /></tr><tr><td class="docs"><h2>A static site generated with Stasis</h2>
 
 <p>This is the annotated source code of
@@ -2911,7 +2911,8 @@ and the source of
                        [&quot;/styles/semantic.min.css&quot;
                         &quot;/styles/solarized-light.css&quot;])
    (assets/load-assets &quot;public&quot;
-                       [#&quot;/images/.*\.png&quot;
+                       [#&quot;/fonts/*&quot;
+                        #&quot;/images/.*\.png&quot;
                         #&quot;/themes/*&quot;])
    [{:path &quot;/styles/custom-styles.css&quot;
      :contents (custom-styles/load-custom-styles)
@@ -3258,9 +3259,7 @@ and the source of
    (include-meta)
    [:link {:type &quot;text/css&quot;
            :rel &quot;stylesheet&quot;
-           :href (str &quot;https://fonts.googleapis.com/css?family=Lato&quot;
-                      (java.net.URLEncoder/encode &quot;|&quot; &quot;UTF-8&quot;)
-                      &quot;Open+Sans&quot;)}]
+           :href (str &quot;https://fonts.googleapis.com/css?family=Open+Sans&quot;)}]
       [:link {:type &quot;text/css&quot;
            :rel &quot;stylesheet&quot;
            :href &quot;/bundles/styles.css&quot;}]])</pre></td></tr><tr><td class="docs">
@@ -3398,6 +3397,11 @@ share the same language.</p>
 (def dark-grey &quot;#2E2E2E&quot;)
 (def solarized-light-background &quot;#eee8d5&quot;)
 (def solarized-dark-background &quot;#073642&quot;)</pre></td></tr><tr><td class="docs">
+</td><td class="codes"><pre class="brush: clojure">(def lato-font
+  [&quot;@font-face&quot; {:font-family &quot;Lato&quot;
+                 :font-style &quot;normal&quot;
+                 :font-weight 400
+                 :src &quot;url('../fonts/lato-regular.woff2') format('woff2')&quot;}])</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(def html
   [:html {:overflow-y &quot;scroll&quot;}])</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(def body
@@ -3448,7 +3452,8 @@ share the same language.</p>
    [:a {:opacity &quot;1&quot;
         :text-decoration &quot;none&quot;}]])</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(def css-lines
-  [html
+  [lato-font
+   html
    body
    inverted-menu
    menu
