--- a/source/index.html
+++ b/source/index.html
@@ -2865,7 +2865,7 @@ net.brehaut.ClojureTools = (function (SH) {
     build_tree: build_tree
   };
 })(SyntaxHighlighter);
-</script><title>marcandregoyette -- Marginalia</title></head><body><table><tr><td class="docs"><div class="header"><h1 class="project-name"><a href="https://marcandregoyette.com">marcandregoyette</a></h1><h2 class="project-version">0.23.0</h2><br /><p>Personal website of Marc-André Goyette (https://marcandregoyette.com).</p>
+</script><title>marcandregoyette -- Marginalia</title></head><body><table><tr><td class="docs"><div class="header"><h1 class="project-name"><a href="https://marcandregoyette.com">marcandregoyette</a></h1><h2 class="project-version">0.23.2</h2><br /><p>Personal website of Marc-André Goyette (https://marcandregoyette.com).</p>
 </div><div class="dependencies"><h3>dependencies</h3><table><tr><td class="dep-name">org.clojure/clojure</td><td class="dotted"><hr /></td><td class="dep-version">1.10.0</td></tr><tr><td class="dep-name">org.clojure/data.xml</td><td class="dotted"><hr /></td><td class="dep-version">0.0.8</td></tr><tr><td class="dep-name">org.clojure/tools.reader</td><td class="dotted"><hr /></td><td class="dep-version">1.3.2</td></tr><tr><td class="dep-name">clj-commons/fs</td><td class="dotted"><hr /></td><td class="dep-version">1.5.0</td></tr><tr><td class="dep-name">com.vladsch.flexmark/flexmark</td><td class="dotted"><hr /></td><td class="dep-version">0.40.18</td></tr><tr><td class="dep-name">enlive</td><td class="dotted"><hr /></td><td class="dep-version">1.1.6</td></tr><tr><td class="dep-name">org.python/jython-standalone</td><td class="dotted"><hr /></td><td class="dep-version">2.7.1</td></tr><tr><td class="dep-name">org.pygments/pygments</td><td class="dotted"><hr /></td><td class="dep-version">2.3.1</td></tr><tr><td class="dep-name">ring</td><td class="dotted"><hr /></td><td class="dep-version">1.7.1</td></tr><tr><td class="dep-name">rum</td><td class="dotted"><hr /></td><td class="dep-version">0.11.3</td></tr><tr><td class="dep-name">stasis</td><td class="dotted"><hr /></td><td class="dep-version">2.4.0</td></tr><tr><td class="dep-name">tongue</td><td class="dotted"><hr /></td><td class="dep-version">0.2.6</td></tr></table></div></td><td class="codes" style="text-align: center; vertical-align: middle;color: #666;padding-right:20px"><br /><br /><br />(this space intentionally left almost blank)</td></tr><tr><td class="docs"><div class="toc"><a name="toc"><h3>namespaces</h3></a><ul><li><a href="#marcandregoyette.core">marcandregoyette.core</a></li><li><a href="#marcandregoyette.pages">marcandregoyette.pages</a></li><li><a href="#marcandregoyette.posts">marcandregoyette.posts</a></li><li><a href="#marcandregoyette.highlight">marcandregoyette.highlight</a></li><li><a href="#marcandregoyette.templates">marcandregoyette.templates</a></li><li><a href="#marcandregoyette.components">marcandregoyette.components</a></li><li><a href="#marcandregoyette.tags">marcandregoyette.tags</a></li><li><a href="#marcandregoyette.feed">marcandregoyette.feed</a></li><li><a href="#marcandregoyette.translations">marcandregoyette.translations</a></li></ul></div></td><td class="codes">&nbsp;</td></tr><tr><td class="docs"><div class="docs-header"><a class="anchor" href="#marcandregoyette.core" name="marcandregoyette.core"><h1 class="project-name">marcandregoyette.core</h1><a class="toc-link" href="#toc">toc</a></a></div></td><td class="codes" /></tr><tr><td class="docs"><h2>A static site generated with Stasis</h2>
 
 <p>This is the annotated source code of
@@ -2947,20 +2947,21 @@ and the source of
             (map (partial get-posts-for-tag posts) tags))))</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(defn- get-feed-for-lang
   [posts lang]
-  [(str &quot;/feeds/languages/&quot; lang &quot;/atom.xml&quot;)
-   (feed/generate-feed
-    (sort-posts (filter-posts-by-lang posts lang)))])</pre></td></tr><tr><td class="docs">
+  (let [feed-path (str &quot;/feeds/languages/&quot; lang &quot;/atom.xml&quot;)]
+    [feed-path
+     (feed/generate-feed
+      feed-path
+      (sort-posts (filter-posts-by-lang posts lang)))]))</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(defn- generate-feeds-by-lang
   [posts]
   (let [languages [&quot;en&quot; &quot;fr&quot;]]
     (into {} (map #(get-feed-for-lang posts %) languages))))</pre></td></tr><tr><td class="docs">
-</td><td class="codes"><pre class="brush: clojure">(defn- get-tag-atom-feed-path [tag]
-  (str &quot;/feeds/tags/&quot; (tags/get-tag-for-html tag) &quot;/atom.xml&quot;))</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(defn- get-feed-for-tag
   [posts tag]
-  [(get-tag-atom-feed-path tag)
-   (feed/generate-feed
-    (sort-posts (filter-posts-by-tag posts tag)))])</pre></td></tr><tr><td class="docs">
+  (let [feed-path (str &quot;/feeds/tags/&quot; (tags/get-tag-for-html tag) &quot;/atom.xml&quot;)]
+    [feed-path
+     (feed/generate-feed
+      feed-path (sort-posts (filter-posts-by-tag posts tag)))]))</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(defn- generate-feeds-by-tag
   [posts]
   (let [tags (get-tags posts)]
@@ -3199,7 +3200,7 @@ and the source of
    (menu-item &quot;/source&quot; &quot;Source&quot;)])</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(rum/defc menu [lang]
   [:nav.navbar.is-primary
-   {:role &quot;navigation&quot; :aria-label &quot;main navigation&quot;}
+   {:aria-label &quot;main navigation&quot;}
    [:div.container
     [:div.navbar-brand.is-family-secondary
      [:a.navbar-item.has-text-weight-bold
@@ -3280,15 +3281,15 @@ so no conversions are needed.</p>
       :metadata
       :date))</pre></td></tr><tr><td class="docs"><p>Builds the XML of an Atom feed that includes all the provided posts.</p>
 </td><td class="codes"><pre class="brush: clojure">(defn generate-feed
-  [postsByUrl]
+  [feed-path posts-by-url]
   (xml/emit-str
    (xml/sexp-as-element
     [:feed {:xmlns &quot;http://www.w3.org/2005/Atom&quot;}
      [:id &quot;urn:marcandregoyette-com:feed&quot;]
-     [:updated (find-most-recent-date postsByUrl)]
+     [:updated (find-most-recent-date posts-by-url)]
      [:title {:type &quot;text&quot;} &quot;Marc-Andr\u00E9 Goyette&quot;]
-     [:link {:rel &quot;self&quot; :href &quot;https://marcandregoyette.com/atom.xml&quot;}]
-     (map generate-feed-entry postsByUrl)])))</pre></td></tr><tr><td class="spacer docs">&nbsp;</td><td class="codes" /></tr><tr><td class="docs"><div class="docs-header"><a class="anchor" href="#marcandregoyette.translations" name="marcandregoyette.translations"><h1 class="project-name">marcandregoyette.translations</h1><a class="toc-link" href="#toc">toc</a></a></div></td><td class="codes" /></tr><tr><td class="docs">
+     [:link {:rel &quot;self&quot; :href (str &quot;https://marcandregoyette.com&quot; feed-path)}]
+     (map generate-feed-entry posts-by-url)])))</pre></td></tr><tr><td class="spacer docs">&nbsp;</td><td class="codes" /></tr><tr><td class="docs"><div class="docs-header"><a class="anchor" href="#marcandregoyette.translations" name="marcandregoyette.translations"><h1 class="project-name">marcandregoyette.translations</h1><a class="toc-link" href="#toc">toc</a></a></div></td><td class="codes" /></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(ns marcandregoyette.translations
   (:require [tongue.core :as tongue]))</pre></td></tr><tr><td class="docs">
 </td><td class="codes"><pre class="brush: clojure">(def dictionaries
