--- a/en/colophon/index.html
+++ b/en/colophon/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Marc-André Goyette" />
   <meta name="description" content="Presentation of the technologies used to generate the personal website of Marc-André Goyette." />
-  <link type="text/css" rel="stylesheet" href="/styles/styles.css" />
+  <link type="text/css" rel="stylesheet" href="/styles.css" />
 </head>
 
 <body>
