--- a/en/about/index.html
+++ b/en/about/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Marc-André Goyette" />
   <meta name="description" content="Presentation of Marc-André Goyette, a programmer that writes about software development, technology and many other topics." />
-  <link type="text/css" rel="stylesheet" href="/styles/styles.css" />
+  <link type="text/css" rel="stylesheet" href="/styles.css" />
 </head>
 
 <body>
