--- a/fr/a-propos/index.html
+++ b/fr/a-propos/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Marc-André Goyette" />
   <meta name="description" content="Présentation de Marc-André Goyette, un programmeur qui écrit sur le développement logiciel, les technologies et plusieurs autre sujets." />
-  <link type="text/css" rel="stylesheet" href="/styles/styles.css" />
+  <link type="text/css" rel="stylesheet" href="/styles.css" />
 </head>
 
 <body>
