--- a/en/colophon/index.html
+++ b/en/colophon/index.html
@@ -34,16 +34,7 @@
             <p><strong>JavaScript</strong>: Avoid as much as possible the use of JavaScript.</p>
             <p><strong>Tracking</strong>: Do not add Google Analytics or other trackers.</p>
             <h2>Fonts</h2>
-            <p>The majority of the text on this web site use two open source fonts created by <a href="https://www.huertatipografica.com/en">Huerta Tipográfica</a>:</p>
-            <ul>
-              <li>
-                <p>Titles use <a href="https://github.com/huertatipografica/Alegreya">Alegreya</a>, a serif font.</p>
-              </li>
-              <li>
-                <p>Texts use <a href="https://github.com/huertatipografica/Alegreya-Sans">Alegreya Sans</a>, the sans serif equivalent of Alegreya.</p>
-              </li>
-            </ul>
-            <p>I chose these two fonts because of their litterary appearance. They create a different ambiance than the popular sans serif fonts that are used all around the web.</p>
+            <p>The text on this web site use <a href="https://github.com/huertatipografica/Alegreya">Alegreya</a>, an open source font created by <a href="https://www.huertatipografica.com/en">Huerta Tipográfica</a>.</p>
             <p>Code blocks use a monospace font that varies depending on the fonts installed on the operating system.</p>
           </div>
           <div class="tags"></div>
