--- a/fr/colophon/index.html
+++ b/fr/colophon/index.html
@@ -34,16 +34,7 @@
             <p><strong>JavaScript</strong>: Éviter le plus possible l'utilisation de JavaScript.</p>
             <p><strong>Tracking</strong>: Ne pas ajouter Google Analytics ou de tracking.</p>
             <h2>Polices de caractères</h2>
-            <p>La plupart des textes sur ce site web utilisent deux polices de caractères libres crées par <a href="https://www.huertatipografica.com/en">Huerta Tipográfica</a>:</p>
-            <ul>
-              <li>
-                <p>Les titres utilisent la police <a href="https://github.com/huertatipografica/Alegreya">Alegreya</a>, une police avec serif.</p>
-              </li>
-              <li>
-                <p>Les textes utilisent la police <a href="https://github.com/huertatipografica/Alegreya-Sans">Alegreya Sans</a>, l'équivalent sans serif d'Alegreya.</p>
-              </li>
-            </ul>
-            <p>J'ai choisi ces deux polices en raison de leur aspect littéraire et calligraphique, qui crée une atmosphère différente que les polices sans serif populaires qui sont utilisées partout sur le web.</p>
+            <p>Les textes de ce site web utilisent <a href="https://github.com/huertatipografica/Alegreya">Alegreya</a>, une police de caractères libre créée par <a href="https://www.huertatipografica.com/en">Huerta Tipográfica</a>.</p>
             <p>Les blocs de code utilisent une police monospace qui varie en fonction des polices installées sur le système.</p>
           </div>
           <div class="tags"></div>
