--- a/fr/colophon/index.html
+++ b/fr/colophon/index.html
@@ -42,7 +42,7 @@
       </article>
     </main>
     <footer class="footer">
-      <p>Copyright © 2019 Marc-André Goyette</p>
+      <p>Copyright © 2019-2020 Marc-André Goyette</p>
       <p>Le contenu de ce site est disponible selon les termes d&#x27;une <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/deed.fr">licence Creative Commons (CC BY-ND 4.0)</a>.</p>
       <p>Les opinions exprimées sur ce site sont uniquement les miennes et ne représentent pas celles de mes employeurs actuels ou passés.</p>
     </footer>
