--- a/en/about/index.html
+++ b/en/about/index.html
@@ -36,7 +36,7 @@
       </article>
     </main>
     <footer class="footer">
-      <p>Copyright © 2019 Marc-André Goyette</p>
+      <p>Copyright © 2019-2020 Marc-André Goyette</p>
       <p>The content of this site is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/">Creative Commons License (CC BY-ND 4.0)</a>.</p>
       <p>Opinions expressed on this site are solely my own, not those of my present or past employers.</p>
     </footer>
