--- a/fr/colophon/index.html
+++ b/fr/colophon/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="navbar-brand is-family-secondary"><a href="/" class="navbar-item has-text-weight-bold">Marc-André Goyette</a></div>
       <div id="topNavbar" class="navbar-menu is-active">
-        <div class="navbar-start"><a href="/" class="navbar-item is-tab">Blogue</a> <a href="/fr/a-propos" class="navbar-item is-tab">À propos</a> <a href="/feeds/languages/fr/atom.xml" class="navbar-item is-tab">Atom/RSS</a> </div>
+        <div class="navbar-start"><a href="/fr/articles" class="navbar-item is-tab">Articles</a> <a href="/fr/a-propos" class="navbar-item is-tab">À propos</a> <a href="/feeds/languages/fr/atom.xml" class="navbar-item is-tab">Atom/RSS</a> </div>
       </div>
     </div>
   </nav>
@@ -37,12 +37,11 @@
             <p>Les textes de ce site web utilisent <a href="https://github.com/huertatipografica/Alegreya">Alegreya</a>, une police de caractères libre créée par <a href="https://www.huertatipografica.com/en">Huerta Tipográfica</a>.</p>
             <p>Les blocs de code utilisent une police monospace qui varie en fonction des polices installées sur le système.</p>
           </div>
-          <div class="tags"></div>
         </div>
       </article>
     </main>
     <footer class="footer">
-      <p>Copyright © 2019-2020 Marc-André Goyette</p>
+      <p>Copyright © 2019-2020 Marc-André Goyette | <a href="https://github.com/magoyette/magoyette.github.io">Code source</a></p>
       <p>Le contenu de ce site est disponible selon les termes d&#x27;une <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/deed.fr">licence Creative Commons (CC BY-ND 4.0)</a>.</p>
       <p>Les opinions exprimées sur ce site sont uniquement les miennes et ne représentent pas celles de mes employeurs actuels ou passés.</p>
     </footer>
