--- a/fr/index.html
+++ b/fr/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Marc-André Goyette" />
-  <meta name="description" content="Essais de Marc-André Goyette sur le développement logiciel, les technologies, la science-fiction, la littérature et la philosophie." />
+  <meta name="description" content="Essais de Marc-André Goyette sur le développement logiciel, la fiction interactive et la littérature." />
   <link type="text/css" rel="stylesheet" href="/styles.css" />
 </head>
 
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="navbar-brand is-family-secondary"><a href="/" class="navbar-item has-text-weight-bold">Marc-André Goyette</a></div>
       <div id="topNavbar" class="navbar-menu is-active">
-        <div class="navbar-start"><a href="/" class="navbar-item is-tab">Blogue</a> <a href="/fr/a-propos" class="navbar-item is-tab">À propos</a> <a href="/feeds/languages/fr/atom.xml" class="navbar-item is-tab">Atom/RSS</a> </div>
+        <div class="navbar-start"><a href="/fr/articles" class="navbar-item is-tab">Articles</a> <a href="/fr/a-propos" class="navbar-item is-tab">À propos</a> <a href="/feeds/languages/fr/atom.xml" class="navbar-item is-tab">Atom/RSS</a> </div>
       </div>
     </div>
   </nav>
@@ -25,7 +25,7 @@
       <article class="card post">
         <div class="card-content">
           <div class="date has-text-grey-dark has-text-right">Écrit le 21 avril 2019</div>
-          <div class="content"><a href="/fr/introduction/">
+          <div class="content"><a href="/fr/index.html">
               <h1 class="title is-family-secondary">Introduction</h1>
             </a>
             <p>Un exemple de post. Essai de coloration syntaxique avec Java.</p>
@@ -41,12 +41,11 @@
 </code></pre>
             </div>
           </div>
-          <div class="tags"><a href="/fr/tags/java/" class="tag is-medium">Java</a> <a href="/fr/tags/guava/" class="tag is-medium">Guava</a> </div>
         </div>
       </article>
     </main>
     <footer class="footer">
-      <p>Copyright © 2019-2020 Marc-André Goyette</p>
+      <p>Copyright © 2019-2020 Marc-André Goyette | <a href="https://github.com/magoyette/magoyette.github.io">Code source</a></p>
       <p>Le contenu de ce site est disponible selon les termes d&#x27;une <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/deed.fr">licence Creative Commons (CC BY-ND 4.0)</a>.</p>
       <p>Les opinions exprimées sur ce site sont uniquement les miennes et ne représentent pas celles de mes employeurs actuels ou passés.</p>
     </footer>
