--- a/en/about/index.html
+++ b/en/about/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Marc-André Goyette" />
-  <meta name="description" content="Presentation of Marc-André Goyette, a programmer that writes about software development, technology and many other topics." />
+  <meta name="description" content="Presentation of Marc-André Goyette, a programmer that writes about software development, interactive fiction and litterature." />
   <link type="text/css" rel="stylesheet" href="/styles.css" />
 </head>
 
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="navbar-brand is-family-secondary"><a href="/en" class="navbar-item has-text-weight-bold">Marc-André Goyette</a></div>
       <div id="topNavbar" class="navbar-menu is-active">
-        <div class="navbar-start"><a href="/en" class="navbar-item is-tab">Blog</a> <a href="/en/about" class="navbar-item is-tab">About</a> <a href="/feeds/languages/en/atom.xml" class="navbar-item is-tab">Atom/RSS</a> </div>
+        <div class="navbar-start"><a href="/en/articles" class="navbar-item is-tab">Articles</a> <a href="/en/about" class="navbar-item is-tab">About</a> <a href="/feeds/languages/en/atom.xml" class="navbar-item is-tab">Atom/RSS</a> </div>
       </div>
     </div>
   </nav>
@@ -31,12 +31,11 @@
             <p>This is my personal web site.</p>
             <p>For more details on the web site itself, see the <a href="../colophon/">colophon</a>.</p>
           </div>
-          <div class="tags"></div>
         </div>
       </article>
     </main>
     <footer class="footer">
-      <p>Copyright © 2019-2020 Marc-André Goyette</p>
+      <p>Copyright © 2019-2020 Marc-André Goyette | <a href="https://github.com/magoyette/magoyette.github.io">Source code</a></p>
       <p>The content of this site is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/">Creative Commons License (CC BY-ND 4.0)</a>.</p>
       <p>Opinions expressed on this site are solely my own, not those of my present or past employers.</p>
     </footer>
