--- a/en/index.html
+++ b/en/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Marc-André Goyette" />
-  <meta name="description" content="Essays written by Marc-André about software development, technology, science-fiction, litterature and philosophy." />
+  <meta name="description" content="Essays written by Marc-André about software development, interactive fiction and litterature." />
   <link type="text/css" rel="stylesheet" href="/styles.css" />
 </head>
 
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="navbar-brand is-family-secondary"><a href="/en" class="navbar-item has-text-weight-bold">Marc-André Goyette</a></div>
       <div id="topNavbar" class="navbar-menu is-active">
-        <div class="navbar-start"><a href="/en" class="navbar-item is-tab">Blog</a> <a href="/en/about" class="navbar-item is-tab">About</a> <a href="/feeds/languages/en/atom.xml" class="navbar-item is-tab">Atom/RSS</a> </div>
+        <div class="navbar-start"><a href="/en/articles" class="navbar-item is-tab">Articles</a> <a href="/en/about" class="navbar-item is-tab">About</a> <a href="/feeds/languages/en/atom.xml" class="navbar-item is-tab">Atom/RSS</a> </div>
       </div>
     </div>
   </nav>
@@ -25,7 +25,7 @@
       <article class="card post">
         <div class="card-content">
           <div class="date has-text-grey-dark has-text-right">Written on 21 April 2019</div>
-          <div class="content"><a href="/en/introduction/">
+          <div class="content"><a href="/en/index.html">
               <h1 class="title is-family-secondary">Introduction</h1>
             </a>
             <p>Example of a post. Try Java syntax highlight.</p>
@@ -41,12 +41,11 @@
 </code></pre>
             </div>
           </div>
-          <div class="tags"><a href="/en/tags/java/" class="tag is-medium">Java</a> <a href="/en/tags/guava/" class="tag is-medium">Guava</a> <a href="/en/tags/clojure/" class="tag is-medium">Clojure</a> </div>
         </div>
       </article>
     </main>
     <footer class="footer">
-      <p>Copyright © 2019-2020 Marc-André Goyette</p>
+      <p>Copyright © 2019-2020 Marc-André Goyette | <a href="https://github.com/magoyette/magoyette.github.io">Source code</a></p>
       <p>The content of this site is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/">Creative Commons License (CC BY-ND 4.0)</a>.</p>
       <p>Opinions expressed on this site are solely my own, not those of my present or past employers.</p>
     </footer>
