--- a/en/index.html
+++ b/en/index.html
@@ -25,7 +25,7 @@
       <article class="card post">
         <div class="card-content">
           <div class="date has-text-grey-dark has-text-right">Written on 21 April 2019</div>
-          <div class="content"><a href="/en/index.html">
+          <div class="content"><a href="/en/introduction/">
               <h1 class="title is-family-secondary">Introduction</h1>
             </a>
             <p>Example of a post. Try Java syntax highlight.</p>
