--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <article class="card post">
         <div class="card-content">
           <div class="date has-text-grey-dark has-text-right">Écrit le 21 avril 2019</div>
-          <div class="content"><a href="/index.html">
+          <div class="content"><a href="/fr/introduction/">
               <h1 class="title is-family-secondary">Introduction</h1>
             </a>
             <p>Un exemple de post. Essai de coloration syntaxique avec Java.</p>
