--- a/en/index.html
+++ b/en/index.html
@@ -22,7 +22,7 @@
   </nav>
   <div class="container">
     <main>
-      <article class="card post">
+      <article class="card">
         <div class="card-content">
           <div class="date has-text-grey-dark has-text-right">Written on 21 April 2019</div>
           <div class="content"><a href="/en/introduction/">
