--- a/en/about/index.html
+++ b/en/about/index.html
@@ -22,7 +22,7 @@
   </nav>
   <div class="container">
     <main>
-      <article class="card post">
+      <article class="card">
         <div class="card-content">
           <div></div>
           <div class="content"><a href="/en/about/">
